ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  name: main-web
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: bellclone-server.maowtm.org
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: bellclone-ws
            port:
              name: ws
  tls:
  - hosts:
    - "k.maowtm.org"
    - "*.k.maowtm.org"
    - "bellclone-server.maowtm.org"
    secretName: main-ingress-cert

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: default
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
